correction sonar